--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.10",
+    "bootstrap": "^4.5.0",
     "gatsby": "^2.22.15",
     "gatsby-plugin-emotion": "^4.3.3",
     "gatsby-plugin-sass": "^2.3.3",
@@ -23,14 +28,17 @@
     "gatsby-transformer-remark": "^2.8.14",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
+    "react-scroll-parallax": "^2.3.3",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-kirkham": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "tailwindcss": "^1.4.6"
   },
   "repository": {
     "type": "git",
