--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@fortawesome/react-fontawesome": "^0.1.10",
     "bootstrap": "^4.5.0",
     "gatsby": "^2.22.15",
+    "gatsby-image": "^2.4.6",
     "gatsby-plugin-emotion": "^4.3.3",
     "gatsby-plugin-sass": "^2.3.3",
+    "gatsby-plugin-sharp": "^2.6.10",
     "gatsby-plugin-typography": "^2.5.3",
     "gatsby-source-filesystem": "^2.3.10",
     "gatsby-transformer-remark": "^2.8.14",
+    "gatsby-transformer-sharp": "^2.5.4",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
