--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.12.0",
     "react-scroll-parallax": "^2.3.3",
     "react-typography": "^0.16.19",
+    "react-unity-webgl": "^7.1.10",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-kirkham": "^0.16.19"
