--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@emotion/core": "^10.0.28",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.10",
     "bootstrap": "^4.5.0",
+    "font-awesome": "^4.7.0",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-emotion": "^4.3.3",
-    "gatsby-plugin-sass": "^2.3.3",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
+    "gatsby-plugin-sass": "^2.3.7",
     "gatsby-plugin-sharp": "^2.6.10",
+    "gatsby-plugin-typescript": "^2.4.8",
     "gatsby-plugin-typography": "^2.5.3",
     "gatsby-source-filesystem": "^2.3.10",
     "gatsby-transformer-remark": "^2.8.14",
@@ -33,15 +37,22 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
+    "react-fontawesome": "^1.7.1",
+    "react-helmet": "^6.1.0",
     "react-scroll-parallax": "^2.3.3",
     "react-typography": "^0.16.19",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5",
+    "typescript-plugin-css-modules": "^2.3.0",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
-    "typography-theme-kirkham": "^0.16.19"
+    "typography-theme-kirkham": "^0.16.19",
+    "use-persisted-state": "^0.3.0"
   },
   "devDependencies": {
-    "prettier": "2.0.5",
-    "tailwindcss": "^1.4.6"
+    "@babel/core": "^7.10.4",
+    "@babel/register": "^7.10.4",
+    "prettier": "2.0.5"
   },
   "repository": {
     "type": "git",
